# investiny

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yaml
docs/: installation.md
src/investiny/: config.py  utils.py
tests/: conftest.py  test_historical.py  test_info.py  test_search.py
