[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "investiny"
version = "0.7.2"
description = "investpy but made tiny."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alvaro Bartolome", email = "alvarobartt@yahoo.com" },
]
dependencies = [
    "curl-cffi>=0.13.0,<1.0.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4.0,<2.0.0",
    "mkdocs-material>=8.5.4,<9.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.1.0,<2.0.0",
    "mkdocstrings[python]>=0.19.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/alvarobartt/investiny"
Documentation = "https://investiny.readthedocs.io/"
Repository = "https://github.com/alvarobartt/investiny"

[dependency-groups]
dev = [
    "black>=22.6.0,<23.0.0",
    "flake8>=7.0.0,<8.0.0",
    "isort>=5.10.1,<6.0.0",
    "mypy>=0.971,<1.0.0",
    "pre-commit>=2.20.0,<3.0.0",
    "pytest>=7.1.2,<8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/investiny"]

[tool.isort]
profile = "black"

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = "investiny"
implicit_reexport = true
